kubernetes/examples_resource_files/test-hpa-custom-metric.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
spec:
  selector:
    matchLabels:
      run: php-apache
  replicas: 1
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: php-apache
        image: k8s.gcr.io/hpa-example
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache-service
  labels:
    run: php-apache
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    run: php-apache
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "php-apache-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: "php-apache-ingress"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: php-apache-service
              servicePort: 80
